# CS-GradWise-Engine

./: CMakeLists.txt  Doxyfile  README.md
data/: courses.txt
docs/html/: _acceptance_test_common_8cpp.html  _acceptance_test_common_8cpp.js  _acceptance_test_common_8h.html  _acceptance_test_common_8h.js  _acceptance_test_common_8h_source.html  _change_course_acceptance_test_8cpp.html  _change_course_acceptance_test_8h.html  _change_course_acceptance_test_8h.js  _change_course_acceptance_test_8h_source.html  _delay_course_acceptance_test_8cpp.html  _delay_course_acceptance_test_8h.html  _delay_course_acceptance_test_8h.js  _fail_course_acceptance_test_8h.html  (+44 more)
src/: AcademicData.h  AcceptanceTestCommon.cpp  AcceptanceTestCommon.h  ChangeCourseAcceptanceTest.cpp  ChangeCourseAcceptanceTest.h  Course.cpp  Course.h  CourseCatalog.cpp  CourseCatalog.h  CourseCatalogLoader.cpp  CourseCatalogLoader.h  CourseCatalogPanel.cpp  CourseCatalogPanel.h  CourseCatalogSaver.cpp  CourseCatalogSaver.h  CourseOffering.cpp  CourseOffering.h  DelayCourseAcceptanceTest.cpp  DelayCourseAcceptanceTest.h  FailCourseAcceptanceTest.cpp  FailCourseAcceptanceTest.h  MainFrame.cpp  MainFrame.h  OutputExportPanel.cpp  OutputExportPanel.h  PlannedSchedule.cpp  PlannedSchedule.h  PlannedScheduleStorage.cpp  PlannedScheduleStorage.h  Prerequisite.cpp  Prerequisite.h  ScheduleGenerationEngine.cpp  ScheduleGenerationEngine.h  SchedulePreferences.h  ScheduleValidationPanel.cpp  ScheduleValidationPanel.h  SpecializationAcceptanceTest.cpp  SpecializationAcceptanceTest.h  StudentProfile.cpp  StudentProfile.h  (+10 more)
(+21 files in other folders)
